[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/common/font/Montserrat-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/common/sound/Menu Selection Click.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/common/sound/validation.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=6]
resource_name = "Pop"
tracks/0/type = "value"
tracks/0/path = NodePath("TitreFin:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fadding_letter_finished"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TitreFin:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="GameOver" type="Control"]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitreFin" type="Label" parent="."]
margin_left = 297.0
margin_top = 92.0
margin_right = 726.0
margin_bottom = 182.0
custom_colors/font_color = Color( 0.831373, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over 	"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="."]
margin_right = 12.0
margin_bottom = 20.0

[node name="Rejouer" type="Button" parent="MenuButton"]
margin_left = 422.0
margin_top = 240.0
margin_right = 602.0
margin_bottom = 300.0
focus_neighbour_top = NodePath("../RetourMenu")
custom_colors/font_color_focus = Color( 0.996078, 1, 0.298039, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
text = "Retry"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetourMenu" type="Button" parent="MenuButton"]
margin_left = 325.0
margin_top = 357.0
margin_right = 699.0
margin_bottom = 417.0
focus_neighbour_bottom = NodePath("../Rejouer")
custom_colors/font_color_focus = Color( 0.996078, 1, 0.298039, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = "Go to Main Menu"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pop = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="ChangingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ValidationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="focus_entered" from="MenuButton/Rejouer" to="." method="_on_Rejouer_focus_entered"]
[connection signal="pressed" from="MenuButton/Rejouer" to="." method="_on_Rejouer_pressed"]
[connection signal="focus_entered" from="MenuButton/RetourMenu" to="." method="_on_RetourMenu_focus_entered"]
[connection signal="pressed" from="MenuButton/RetourMenu" to="." method="_on_RetourMenu_pressed"]
